--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,6 @@
-url=jdbc:postgresql://localhost:5432/duynguyen?currentSchema=duynguyen
-username=postgres
-password=Kimdung@1234
-driver=org.postgresql.Driver
-outputChangeLogFile=src/main/resources/db/changelog/db.changelog-master.xml
+#url=jdbc:postgresql://localhost:5432/duynguyen?currentSchema=duynguyen
+#username=postgres
+#password=Kimdung@1234
+#driver=org.postgresql.Driver
+#outputChangeLogFile=src/main/resources/db/changelog/db.changelog-master.yaml
+#classpath=lib/snakeyaml-1.16.jar
