--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring.jpa.hibernate.ddl-auto: update
 spring.jpa.properties.hibernate.default_schema: duynguyen
 liquibase.default-schema: duynguyen
 
-project.base-dir: file:///F:/projects/personal-project
+project.base-dir: /app
 spring.thymeleaf.cache: false
 spring.resources.cache-period: 0
 spring.resources.static-locations: ${project.base-dir}/src/main/resources/static/
