--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,17 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.106</version>
+		</dependency>
 
 	</dependencies>
 
