--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 			<version>0.7.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.xml.security</groupId>
+			<artifactId>xml-security-impl</artifactId>
+			<version>1.0</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
