--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
 			<!--<artifactId>spring-security-messaging</artifactId>-->
 			<!--<version>4.0.1.RELEASE</version>-->
 		<!--</dependency>-->
+		<dependency>
+			<groupId>com.sun.xml.security</groupId>
+			<artifactId>xml-security-impl</artifactId>
+			<version>1.0</version>
+		</dependency>
 
     </dependencies>
 
